Build 3425 : Réinitialisation complète du projet + fix dépréciation Java
🔄 Nouvelle méthode reinitialiserProjet() :
- Nettoie l'interface graphique (hotspots, points, vignettes)
- Réinitialise tous les compteurs et variables
- Libère la mémoire (null + recréation des tableaux)
- Vide le cache AI (OllamaService)
- Appelée dans projetCharge(), projetChargeNom() et projetsNouveau()

✨ Résultat : Plus d'interférence entre visites chargées successivement

🔧 Fix dépréciation Java 20 :
- Remplacement de new URL(String) par new URI(String).toURL()
- Ajout des imports URI et URISyntaxException
- Méthode netIsAvailable() mise à jour